results/SVCOMP/houdini/log-Class_method1-2024_03_18_17_18_56.txt
public class Class_method1 {
  //@ ensures \result;
  //@ ensures !\result;
  public static boolean fun() {
    return f(String.class, true);
  }

  //@ non_null
  //@ requires b;
  //@ requires !b;
  //@ ensures \result;
  //@ ensures !\result;
  //@ ensures c == null ==> \result;
  //@ ensures c == null ==> !\result;
  //@ ensures c != null ==> \result;
  //@ ensures c != null ==> !\result;
  //@ ensures b ==> \result;
  //@ ensures b ==> !\result;
  //@ ensures !b ==> \result;
  //@ ensures !b ==> !\result;
  public static boolean f(Class c, boolean b) {
    return b;
  }

  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    fun();
  }
}


/home/max/Documents/JMLGPT/tmp/Class_method1.java:8: error: No modifiers are allowed prior to a lightweight specification case
  //@ non_null
      ^
1 error

public class Class_method1 {
  //@ ensures \result;
  //@ ensures !\result;
  public static boolean fun() {
    return f(String.class, true);
  }

  //@ requires b;
  //@ requires !b;
  //@ ensures \result;
  //@ ensures !\result;
  //@ ensures c == null ==> \result;
  //@ ensures c == null ==> !\result;
  //@ ensures c != null ==> \result;
  //@ ensures c != null ==> !\result;
  //@ ensures b ==> \result;
  //@ ensures b ==> !\result;
  //@ ensures !b ==> \result;
  //@ ensures !b ==> !\result;
  public static boolean f(Class c, boolean b) {
    return b;
  }

  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    fun();
  }
}


/home/max/Documents/JMLGPT/tmp/Class_method1.java:5: verify: The prover cannot establish an assertion (Precondition: /home/max/Documents/JMLGPT/tmp/Class_method1.java:20:) in method fun
    return f(String.class, true);
            ^
/home/max/Documents/JMLGPT/tmp/Class_method1.java:20: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/Class_method1.java:5:
  public static boolean f(Class c, boolean b) {
                        ^
/home/max/Documents/JMLGPT/tmp/Class_method1.java:9: verify: Precondition conjunct is false: !b
  //@ requires !b;
               ^
3 verification failures

public class Class_method1 {
  //@ ensures \result;
  //@ ensures !\result;
  public static boolean fun() {
    return f(String.class, true);
  }

  //@ requires b;
  //@ ensures \result;
  //@ ensures !\result;
  //@ ensures c == null ==> \result;
  //@ ensures c == null ==> !\result;
  //@ ensures c != null ==> \result;
  //@ ensures c != null ==> !\result;
  //@ ensures b ==> \result;
  //@ ensures b ==> !\result;
  //@ ensures !b ==> \result;
  //@ ensures !b ==> !\result;
  public static boolean f(Class c, boolean b) {
    return b;
  }

  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    fun();
  }
}


/home/max/Documents/JMLGPT/tmp/Class_method1.java:20: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/Class_method1.java:10:) in method f
    return b;
    ^
/home/max/Documents/JMLGPT/tmp/Class_method1.java:10: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/Class_method1.java:20:
  //@ ensures !\result;
      ^
2 verification failures

public class Class_method1 {
  //@ ensures \result;
  //@ ensures !\result;
  public static boolean fun() {
    return f(String.class, true);
  }

  //@ requires b;
  //@ ensures \result;
  //@ ensures c == null ==> \result;
  //@ ensures c == null ==> !\result;
  //@ ensures c != null ==> \result;
  //@ ensures c != null ==> !\result;
  //@ ensures b ==> \result;
  //@ ensures b ==> !\result;
  //@ ensures !b ==> \result;
  //@ ensures !b ==> !\result;
  public static boolean f(Class c, boolean b) {
    return b;
  }

  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    fun();
  }
}


/home/max/Documents/JMLGPT/tmp/Class_method1.java:19: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/Class_method1.java:13:) in method f
    return b;
    ^
/home/max/Documents/JMLGPT/tmp/Class_method1.java:13: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/Class_method1.java:19:
  //@ ensures c != null ==> !\result;
      ^
2 verification failures

public class Class_method1 {
  //@ ensures \result;
  //@ ensures !\result;
  public static boolean fun() {
    return f(String.class, true);
  }

  //@ requires b;
  //@ ensures \result;
  //@ ensures c == null ==> \result;
  //@ ensures c == null ==> !\result;
  //@ ensures c != null ==> \result;
  //@ ensures b ==> \result;
  //@ ensures b ==> !\result;
  //@ ensures !b ==> \result;
  //@ ensures !b ==> !\result;
  public static boolean f(Class c, boolean b) {
    return b;
  }

  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    fun();
  }
}


/home/max/Documents/JMLGPT/tmp/Class_method1.java:18: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/Class_method1.java:14:) in method f
    return b;
    ^
/home/max/Documents/JMLGPT/tmp/Class_method1.java:14: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/Class_method1.java:18:
  //@ ensures b ==> !\result;
      ^
2 verification failures

public class Class_method1 {
  //@ ensures \result;
  //@ ensures !\result;
  public static boolean fun() {
    return f(String.class, true);
  }

  //@ requires b;
  //@ ensures \result;
  //@ ensures c == null ==> \result;
  //@ ensures c == null ==> !\result;
  //@ ensures c != null ==> \result;
  //@ ensures b ==> \result;
  //@ ensures !b ==> \result;
  //@ ensures !b ==> !\result;
  public static boolean f(Class c, boolean b) {
    return b;
  }

  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    fun();
  }
}


/home/max/Documents/JMLGPT/tmp/Class_method1.java:5: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/Class_method1.java:3:) in method fun
    return f(String.class, true);
    ^
/home/max/Documents/JMLGPT/tmp/Class_method1.java:3: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/Class_method1.java:5:
  //@ ensures !\result;
      ^
2 verification failures

public class Class_method1 {
  //@ ensures \result;
  public static boolean fun() {
    return f(String.class, true);
  }

  //@ requires b;
  //@ ensures \result;
  //@ ensures c == null ==> \result;
  //@ ensures c == null ==> !\result;
  //@ ensures c != null ==> \result;
  //@ ensures b ==> \result;
  //@ ensures !b ==> \result;
  //@ ensures !b ==> !\result;
  public static boolean f(Class c, boolean b) {
    return b;
  }

  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    fun();
  }
}



